# tic-tac-toe

./: .clang-format  .clang-tidy  .clang-tidy-ignore-checks  .cppcheck-config  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
include/: board.hpp  config.hpp  engine.hpp  label_buttons.hpp  logger.hpp  options.hpp  player.hpp  state_machine.hpp
src/: board.cpp  config.cpp  engine.cpp  main.cpp  options.cpp  player.cpp
utils/: box_utils.hpp  random.hpp  timer.hpp
